F/fmtok8s-app-J1cIgN2Wj/fmtok8s-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: fmtok8s-agenda
  labels:
    chart: fmtok8s-agenda-rest-0.1.0
    draft: draft-app
  annotations:
    fabric8.io/expose: "true"
    fabric8.io/ingress.annotations: 'kubernetes.io/ingress.class: nginx'
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: release-name-fmtok8s-agenda-rest
---
apiVersion: v1
kind: Service
metadata:
  name: fmtok8s-api-gateway
  labels:
    chart: fmtok8s-api-gateway-0.1.0
    draft: draft-app
  annotations:
    fabric8.io/expose: "true"
    fabric8.io/ingress.annotations: 'kubernetes.io/ingress.class: nginx'
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: release-name-fmtok8s-api-gateway
---
apiVersion: v1
kind: Service
metadata:
  name: fmtok8s-c4p
  labels:
    chart: fmtok8s-c4p-rest-0.1.0
    draft: draft-app
  annotations:
    fabric8.io/expose: "true"
    fabric8.io/ingress.annotations: 'kubernetes.io/ingress.class: nginx'
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: release-name-fmtok8s-c4p-rest
---
apiVersion: v1
kind: Service
metadata:
  name: fmtok8s-email
  labels:
    chart: fmtok8s-email-rest-0.1.0
    draft: draft-app
  annotations:
    fabric8.io/expose: "true"
    fabric8.io/ingress.annotations: 'kubernetes.io/ingress.class: nginx'
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: release-name-fmtok8s-email-rest
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-fmtok8s-agenda-rest
  labels:
    draft: draft-app
    chart: fmtok8s-agenda-rest-0.1.0
spec:
  selector:
    matchLabels:
      app: release-name-fmtok8s-agenda-rest
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: release-name-fmtok8s-agenda-rest
    spec:
      serviceAccountName: release-name-fmtok8s-agenda-rest
      containers:
        - name: fmtok8s-agenda-rest
          image: salaboy/fmtok8s-agenda-rest:0.1.0
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 1000m
              memory: 1768Mi
            requests:
              cpu: 650m
              memory: 1024Mi
      terminationGracePeriodSeconds: null
      imagePullSecrets: null
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-fmtok8s-api-gateway
  labels:
    draft: draft-app
    chart: fmtok8s-api-gateway-0.1.0
spec:
  selector:
    matchLabels:
      app: release-name-fmtok8s-api-gateway
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: release-name-fmtok8s-api-gateway
    spec:
      containers:
        - name: fmtok8s-api-gateway
          image: salaboy/fmtok8s-api-gateway:0.1.0
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 1500m
              memory: 1768Mi
            requests:
              cpu: 750m
              memory: 1024Mi
      terminationGracePeriodSeconds: null
      imagePullSecrets: null
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-fmtok8s-c4p-rest
  labels:
    draft: draft-app
    chart: fmtok8s-c4p-rest-0.1.0
spec:
  selector:
    matchLabels:
      app: release-name-fmtok8s-c4p-rest
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: release-name-fmtok8s-c4p-rest
    spec:
      serviceAccountName: release-name-fmtok8s-c4p-rest
      containers:
        - name: fmtok8s-c4p-rest
          image: salaboy/fmtok8s-c4p-rest:0.1.0
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 1000m
              memory: 1768Mi
            requests:
              cpu: 650m
              memory: 1024Mi
      terminationGracePeriodSeconds: null
      imagePullSecrets: null
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-fmtok8s-email-rest
  labels:
    draft: draft-app
    chart: fmtok8s-email-rest-0.1.0
spec:
  selector:
    matchLabels:
      app: release-name-fmtok8s-email-rest
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: release-name-fmtok8s-email-rest
    spec:
      serviceAccountName: release-name-fmtok8s-email-rest
      containers:
        - name: fmtok8s-email-rest
          image: salaboy/fmtok8s-email-rest:0.1.0
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 1000m
              memory: 1768Mi
            requests:
              cpu: 650m
              memory: 1024Mi
      terminationGracePeriodSeconds: null
      imagePullSecrets: null
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fmtok8s-api-gateway
                port:
                  number: 80
